# Robotics2022-FirstProject

./: CMakeLists.txt  LICENSE  README.md  package.xml
cfg/: parameters.cfg  parameters.py
devel/: .catkin  .rosinstall
launch/: up.launch
src/: client.cpp  computevelocity.cpp
srv/: reset.srv
